--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "lodash": "2.4.1"
+    "lodash": "2.4.1",
+    "mocha": "^2.0.1",
+    "should": "^4.3.1",
+    "underscore.string": "^2.4.0"
   },
   "repository": {
     "type": "git",
