--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "lodash": "2.4.1",
-    "should": "^4.3.1",
+    "lodash": "^2.4.1",
     "underscore.string": "^2.4.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.0.1",
+    "should": "^4.3.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/AlexanderMac/http-request-parser"
+  },
+  "scripts": {
+    "test": "mocha --reporter spec --check-leaks"
   },
   "keywords": [
     "http-utility",
