--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "http-request-parser",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A node package for parsing HTTP request message, and creating an object model for it.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter spec --check-leaks"
+    "test": "node_modules/.bin/mocha -R spec --check-leaks"
   },
   "dependencies": {
+    "http-const": "^1.0.2",
     "lodash": "^2.4.1",
     "underscore.string": "^2.4.0"
   },
